--- a/ISWC2013/references.bib
+++ b/ISWC2013/references.bib
@@ -41,6 +41,32 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+@inproceedings{DBLP:conf/semweb/HildebrandOH06,
+  author    = {Michiel Hildebrand and
+               Jacco van Ossenbruggen and
+               Lynda Hardman},
+  title     = {{/facet: A Browser for Heterogeneous Semantic Web Repositories}},
+  booktitle = {International Semantic Web Conference},
+  year      = {2006},
+  pages     = {272-285},
+  ee        = {http://dx.doi.org/10.1007/11926078_20},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{DBLP:conf/semweb/GangemiNPDMC12,
+  author    = {Aldo Gangemi and
+               Andrea Giovanni Nuzzolese and
+               Valentina Presutti and
+               Francesco Draicchio and
+               Alberto Musetti and
+               Paolo Ciancarini},
+  title     = {{Automatic Typing of DBpedia Entities}},
+  booktitle = {International Semantic Web Conference (ISWC)},
+  year      = {2012},
+  pages     = {65-81},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-35176-1_5},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 	
 @INPROCEEDINGS{kalyanpur2004automatic,
   author = {Kalyanpur, Aditya and Pastor, Daniel Jim{\'e}nez and Battle, Steve
@@ -358,7 +384,7 @@
 
 @INPROCEEDINGS{KiselyovLS04,
   author = {Kiselyov, Oleg and L\"{a}mmel, Ralf and Schupke, Keean},
-  title = {{Strongly typed heterogeneous collections}},
+  title = {{Strongly Typed Heterogeneous Collections}},
   booktitle = {{Proceedings of the 2004 ACM SIGPLAN workshop on Haskell}},
   year = {2004},
   series = {Haskell '04},
@@ -556,9 +582,18 @@
   publisher = {Springer}
 }
 
+@inproceedings{carroll2004jena,
+  title={{JENA: Implementing the Semantic Web Recommendations}},
+  author={Carroll, Jeremy J and Dickinson, Ian and Dollin, Chris and Reynolds, Dave and Seaborne, Andy and Wilkinson, Kevin},
+  booktitle={13th International World Wide Web conference on Alternate track papers \& posters},
+  pages={74--83},
+  year={2004},
+  organization={ACM}
+}
+
 @INPROCEEDINGS{rdfreactor-iswc2005-poster,
   author = {V{\"o}lkel, Max and Sure, York},
-  title = {RDFReactor -- From Ontologies to Programmatic Data Access},
+  title = {{RDFReactor -- From Ontologies to Programmatic Data Access}},
   booktitle = {{Poster Proceedings of the Fourth International Semantic Web Conference}},
   year = {2005},
   added-at = {2006-08-28T17:01:53.000+0200},
